js/js.translator/testData/incremental/invalidation/esModules/main/testEquals.kt
fun testEquals(lhs: Demo, rhs: Demo): Boolean {
    return lhs == rhs
}
